# ALSA_encapsulation

./: .gitignore  CMakeLists.txt  README.md  main.cc  main.cpp  wav_functions.cpp  wav_functions.h
include/: AlsaControl.h  WavFunctions.h  alsa_control.h  wav_functions.h
src/: AlsaControl.cc  WavFunctions.cc  alsa_control.cc  alsa_control.cpp  wav_functions.cc  wav_functions.cpp
